@@ -1,3 +1,9 @@
+2009-07-30    <piumarta@ubuntu.piumarta.com>
+
+	* config/acinclude.m4 (ac_optflags): Use a more
+	optimisation-resistant strategy to detect validity of access to
+	unaligned doubles.
+
 2009-07-29    <piumarta@ubuntu.piumarta.com>
 
 	* config/configure.ac: Version is 3.10-6.
